# Ragent

./: .env.example  .gitignore  Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml
config/: default.toml
crates/app-agent/: Cargo.toml
crates/app-agent/src/: agent.rs  lib.rs
crates/app-agent/src/tools/: calculator.rs  code_sandbox.rs  mod.rs  web_search.rs
crates/app-api/: Cargo.toml
crates/app-api/src/: main.rs
crates/app-api/src/middleware/: auth.rs
crates/app-api/src/routes/: auth.rs  chat.rs  mod.rs  ws.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  models.rs
crates/app-proto/: Cargo.toml
crates/app-proto/src/: lib.rs  ws_events.rs
migrations/: 001_init_users.sql  002_init_sessions.sql  003_init_messages.sql
