[package]
name = "app-agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
